--- a/config_template/config_template_groups_rule_set_tun_fakeip.json
+++ b/config_template/config_template_groups_rule_set_tun_fakeip.json
@@ -390,7 +390,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["网站|地址|剩余|过期|时间|有效"]}
+        {"action":"exclude","keywords":["网站|地址|剩余|过期|时间|有效|移动|联通|电信|以下"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "10m",
