--- a/config_template/config_template_groups_rule_set_tun.json
+++ b/config_template/config_template_groups_rule_set_tun.json
@@ -373,7 +373,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["网站|地址|剩余|过期|时间|有效"]}
+        {"action":"exclude","keywords":["网站|地址|剩余|过期|时间|有效|禁止|电信|联通|移动|官网"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "10m",
