--- a/config_template/config_template_groups_rule_set_tun_fakeip.json
+++ b/config_template/config_template_groups_rule_set_tun_fakeip.json
@@ -380,7 +380,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["🇭🇰|HK|hk|香港|香|🇹🇼|TW|tw|台湾|台|🇸🇬|SG|sg|新加坡|狮|🇯🇵|JP|jp|日本|日|🇺🇸|US|us|美国|美"]}
+        {"action":"exclude","keywords":["禁止|以下|官网|🇭🇰|HK|hk|香港|香|🇹🇼|TW|tw|台湾|台|🇸🇬|SG|sg|新加坡|狮|🇯🇵|JP|jp|日本|日|🇺🇸|US|us|美国|美"]}
       ]
     },
     {
@@ -390,7 +390,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["网站|地址|剩余|过期|时间|有效|移动|联通|电信|以下|官网"]}
+        {"action":"exclude","keywords":["网站|地址|剩余|过期|时间|有效|移动|联通|电信|以下|官网|禁止"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "10m",
