--- a/config_template/config_template_groups_rule_set_tun_fakeip.json
+++ b/config_template/config_template_groups_rule_set_tun_fakeip.json
@@ -1,6 +1,6 @@
 {
   "log": {
-    "level": "error",
+    "level": "info",
     "timestamp": true
   },
   "experimental": {
@@ -27,11 +27,19 @@
       {
         "tag": "google",
         "address": "https://8.8.8.8/dns-query",
+        "strategy": "ipv4_only",
+        "address_resolver": "dns_resolver",
         "detour": "Proxy"
       },
       {
         "tag": "tx",
         "address": "https://120.53.53.53/dns-query",
+        "address_resolver": "dns_resolver",
+        "detour": "direct"
+      },
+      {
+        "tag": "dns_resolver",
+        "address": "223.5.5.5",
         "detour": "direct"
       },
       {
@@ -41,32 +49,23 @@
       {
         "tag": "block",
         "address": "rcode://success"
+      },
+      {
+        "tag": "dns_refused",
+        "address": "rcode://refused"
       }
     ],
     "rules": [
+      {
+        "outbound": "any",
+        "server": "dns_resolver"
+      },
       {
         "rule_set": "geosite-category-ads-all",
         "server": "block"
       },
       {
-        "outbound": "any",
-        "server": "tx",
-        "disable_cache": true
-      },
-      {
-        "rule_set": "geosite-cn",
-        "server": "tx"
-      },   
-      {
-        "clash_mode": "direct",
-        "server": "tx"
-      },
-      {
-        "clash_mode": "global",
-        "server": "google"
-      },
-      {
-        "inbound": "tun",
+        "rule_set": "geosite-geolocation-!cn",
         "query_type": [
           "A",
           "AAAA"
@@ -76,9 +75,31 @@
       },
       {
         "rule_set": "geosite-geolocation-!cn",
+        "query_type": [
+            "CNAME"
+        ],
+        "server": "google"
+      },
+      {
+        "query_type": [
+            "A",
+            "AAAA",
+            "CNAME"
+        ],
+        "invert": true,
+        "server": "dns_refused",
+        "disable_cache": true
+      },   
+      {
+        "clash_mode": "direct",
+        "server": "tx"
+      },
+      {
+        "clash_mode": "global",
         "server": "google"
       }
     ],
+    "final": "tx",
     "independent_cache": true,
     "strategy": "prefer_ipv4"
   },
@@ -89,8 +110,10 @@
       "inet4_address": "172.19.0.0/30",
       "inet6_address": "fdfe:dcba:9876::0/126",
       "stack": "system",
+      "mtu": 1492,
       "auto_route": true,
       "sniff": true,
+      "sniff_override_destination": false,
       "platform": {
         "http_proxy": {
           "enabled": true,
@@ -414,17 +437,21 @@
     "final": "Proxy",
     "rules": [
       {
-        "type": "logical",
-        "mode": "or",
-        "rules":[
-          {
-            "port":53
-          },
-          {
-            "protocol": "dns"
-          }
-        ],
+        "protocol": "dns",
         "outbound": "dns-out"
+      },
+      {
+        "port": 853,
+        "network": "tcp",
+        "outbound": "block"
+      },
+      {
+        "port": [
+            443,
+            853
+        ],
+        "network": "udp",
+        "outbound": "block"
       },
       {
         "rule_set": "geosite-category-ads-all",
