--- a/config_template/config_template_groups_rule_set_tun_fakeip.json
+++ b/config_template/config_template_groups_rule_set_tun_fakeip.json
@@ -1,6 +1,6 @@
 {
   "log": {
-    "level": "info",
+    "level": "error",
     "timestamp": true
   },
   "experimental": {
@@ -71,7 +71,7 @@
           "AAAA"
         ],
         "server": "fakeip",
-        "rewrite_ttl": 0
+        "rewrite_ttl": 1
       },
       {
         "rule_set": "geosite-geolocation-!cn",
@@ -109,25 +109,11 @@
       "type": "tun",
       "inet4_address": "172.19.0.0/30",
       "inet6_address": "fdfe:dcba:9876::0/126",
-      "stack": "system",
+      "stack": "mixed",
       "mtu": 1492,
       "auto_route": true,
       "sniff": true,
-      "sniff_override_destination": false,
-      "platform": {
-        "http_proxy": {
-          "enabled": true,
-          "server": "127.0.0.1",
-          "server_port": 7890
-        }
-      }
-    },
-    {
-      "tag": "mixed",
-      "type": "mixed",
-      "listen": "127.0.0.1",
-      "listen_port": 7890,
-      "sniff": true
+      "sniff_override_destination": false
     }
   ],
   "outbounds": [
